--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
+spring.jpa.defer-datasource-initialization=true
