--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 spring.jpa.defer-datasource-initialization=true
+logging.level.com.jaredgood.springrecipeapp=debug
